* Removed workspace material's TOC script positioning * Added all necessary workspace materials styles * Fixed workspace materials view's responsive layout * Added high enough z-index to #footer element * Added forms specific font-family decleration * Fixed ckeditor custom styles image paths * Overrided materials.xhtml with flexed version * Added scss files needed in future inside workspace

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_custom-ckeditor-styles.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_custom-ckeditor-styles.scss
@@ -46,7 +46,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/pondering-icon.png");
+    background-image:url("/gfx/icons/64x64/pondering-icon.png");
   }
 }
 
@@ -57,7 +57,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/objective-icon.png");
+    background-image:url("/gfx/icons/64x64/objective-icon.png");
   }
 }
 
@@ -68,7 +68,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/info-icon.png");
+    background-image:url("/gfx/icons/64x64/info-icon.png");
   }
 }
 
@@ -79,7 +79,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/recap-icon.png");
+    background-image:url("/gfx/icons/64x64/recap-icon.png");
   }
 }
 
@@ -90,7 +90,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/link-icon.png");
+    background-image:url("/gfx/icons/64x64/link-icon.png");
   }
 }
 
@@ -101,7 +101,7 @@
   color:#000;
   
   &:after {
-    background-image:url("gfx/icons/64x64/sound-icon.png");
+    background-image:url("/gfx/icons/64x64/sound-icon.png");
   }
 }
 
